tests/miniJava/neg/004310_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { new public int [] java ( ) { return 0 ; } }
